bin_PROGRAMS = nesromtool
nesromtool_SOURCES = \
	src/main.c \
	src/nesromtool.h \
	src/actions.h \
	src/actions.c \
	src/help.h \
	src/help.c \
	src/nesutils.h \
	src/nesutils.c \
	src/types.h \
	src/types.c \
	src/commandline.h \
	src/pathfunc.h \
	src/pathfunc.c \
	src/functions.h \
	src/functions.c \
	src/formats.h \
	src/formats.c \
	src/verbosity.h \
	src/verbosity.c \
	src/patching.h \
	src/patching/ips.h \
	src/patching/ips.c
	

EXTRA_DIST = reconf
